<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BringMe</string>
    <string name="logo_description">BringMe Logo</string>
    <string name="app_id">635266799888180</string>

    <!-- Activity Titles -->
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_splash">Welcome to BringMe</string>
    <string name="title_activity_main"></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_section_request_menu">Request</string>
    <string name="title_section_courier_menu">Courier</string>
    <string name="action_settings">Settings</string>
    <string name="login_message">Login to BringMe</string>
    <string name="request_delivery">Request Delivery</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="title_activity_historry">History</string>
    <string name="title_activity_request_delivery">Request Delivery</string>
    <string name="title_request_delivery_origin">Origin</string>
    <string name="title_request_delivery_courier">Courier</string>
    <string name="title_request_delivery_destination">Destination</string>
    <string name="title_request_delivery_details">Details</string>
    <string name="title_request_delivery_finish">Finish</string>
    <string name="package_address">Package Address</string>
    <string name="action_map">Map</string>
    <string name="action_list">List</string>
    <string name="login_facebook">Login Facebook</string>
    <string name="destination_address">Destination Address</string>
    <string name="detailed_package_location">Detailed Package Location</string>
    <string name="detailed_package_location_example">e.g. (Nearest coffee shop, on top of table 5, bartender)</string>
    <string name="detailed_destination_location">Detailed Destination Location</string>
    <string name="ok">OK</string>
    <string name="package_name_title">Package Name</string>
    <string name="package_description_title">Package Description</string>
    <string name="package_details_title">Package Details</string>
    <string name="title_activity_finish_request_delivery">FinishRequestDeliveryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_delivery_package_name_label">Package Name</string>
    <string name="finish_delivery_package_description_label">Package Description</string>
    <string name="finish_delivery_package_special_notes_label">Package Special Notes</string>
    <string name="finish_delivery_package_detailed_origin_label">Package Detailed Origin</string>
    <string name="finish_delivery_package_detailed_destination_label">Package Detailed Destination</string>
    <string name="courier">courier</string>
    <string name="request">Request</string>
    <string name="title_activity_details_list">List</string>
    <string name="title_activity_details">Details</string>
    <string name="requests">Requests</string>
    <string name="deliveries">Deliveries</string>
    <string name="pick_courier">Pick courier</string>
    <string name="title_activity_accept_delivery">AcceptDeliveryActivity</string>
    <string name="credits">Trabalho Desenvolvido no contexto das unidades curriculares de Projecto em Design III e Introdução à Computação Móvel, 2013-2014</string>
    <string name="designers">Designers:</string>
    <string name="catarina">Catarina Ribeiro</string>
    <string name="laura">Laura Gouveia</string>
    <string name="developers">Developers:</string>
    <string name="filipe">Filipe Pinheiro</string>
    <string name="hugo">Hugo Correia</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="loading_couriers">Loading Couriers</string>
    <string name="none">None</string>
    <string name="sending_notification">Sending Notification</string>
    <string name="title_activity_delivery_action">DeliveryActionActivity</string>
    <string name="requester">Requester</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="origin_address">Origin Address</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="finish">Finish</string>
    <string name="loading_delivery">Loading Delivery</string>
    <string name="title_activity_rate_courier">RateCourierActivity</string>
    <string name="rate_courier_description">Please rate the courier job!</string>
    <string name="submit">Submit</string>
    <string name="loading_profile">Loading Profile</string>
    <string name="loading_history">Loading History</string>

</resources>