<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.ua.icm.bringme.RequestDeliveryActivity" >
    
    <item android:id="@+id/mapViewActionIcon"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_map"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    
    <item android:id="@+id/listViewActionIcon"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/action_list"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
