<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actionDeliveryScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.icm.bringme.DeliveryActionActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/actionDeliveryContainer"
        style="@style/paddingStyles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/actionDeliveryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <pt.ua.icm.bringme.helpers.RoundedImageView
                    android:id="@+id/deliveryCourierUserImage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/default_profile_picture" />

                <TextView
                    android:id="@+id/actionDeliveryRequesterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/none"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TextView
                android:id="@+id/delivery_row_package_name"
                style="@style/textViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/package_name_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/actionDeliveryPackageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/none"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextView07"
                style="@style/textViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/package_details_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/actionDeliveryDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/none"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextView02"
                style="@style/textViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/origin_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/actionDeliveryOriginAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/none"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextView05"
                style="@style/textViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detailed_package_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/actionDeliveryDetailedOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/none"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextView04"
                style="@style/textViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/destination_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/actionDeliveryDestinationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/none"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextView03"
                style="@style/textViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detailed_destination_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/actionDeliveryDetailedDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/none"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:id="@+id/acceptanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/actionDeliveryAcceptButton"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept" />

                <Button
                    android:id="@+id/actionDeliveryRejectButton"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reject" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/finishingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/actionDeliveryFinishButton"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionDeliveryLoader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/loading_delivery"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>