<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.icm.bringme.DeliveryDetailsFragment" >

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/packageDetails"
            style="@style/paddingStyles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <EditText
                android:id="@+id/packageNameEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="4dp"
                android:hint="@string/package_name_title"
                android:inputType="none"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textSize="14sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/packageDescriptionEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/package_description_title"
                android:inputType="none"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/packageDetailsEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/package_details_title"
                android:inputType="none"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailedPackageLocationEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/detailed_package_location"
                android:inputType="none"
                android:minHeight="48dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/detailedDestinationLocationEditText"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/detailed_destination_location"
                android:inputType="none"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/packageLocationDetailsButton"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="64dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/ok" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>
