<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/paddingStyles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ua.icm.bringme.DeliveryCourierProfileFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <pt.ua.icm.bringme.helpers.RoundedImageView
            android:id="@+id/deliveryCourierUserImage"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/deliveryCourierProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="57dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/requests"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green_peas" />

            <TextView
                android:id="@+id/deliveryCourierRequestsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/deliveries"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/green_peas" />

            <TextView
                android:id="@+id/deliveryCourierDeliveriesValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <Button
            android:id="@+id/DeliveryCourierPick"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pick_courier" />

    </LinearLayout>

</FrameLayout>
